fixing the backdrop on firefox .

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   /* height: 200px; */
   max-width: 800px;
   border-radius: 25px;
-  backdrop-filter: blur(50px);
 }
 body{
   background: #777;
@@ -18,4 +17,9 @@ body{
 }
 .shadow{
   box-shadow: 0px 0px 10px black;
+}
+.backdrop{
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+  background: #fede5fdd;
 }
